# SFText

./: .gitignore  CMakeLists.txt
src/: Cursor.cpp  Cursor.h  main.cpp
